[project]
name = "challenge-07-from-2018"
version = "0.1.0"
description = "Solution from challenge of day 07 from 2018"
authors = [
    {name = "Dickson Souza",email = "36424026+disouzam@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
